# axmldecoder

./: Cargo.toml  LICENSE.APACHE  LICENSE.MIT  README.md
axmldecoder-printer/: Cargo.toml
axmldecoder-printer/src/: main.rs
examples/: AndroidManifest.xml  AndroidManifestMultipleNamespaces.xml  AndroidManifestNoNamespace.xml  AndroidManifestUnknownNamespace.xml  AndroidManifest_malformed.xml
src/: binaryxml.rs  lib.rs  resource_value.rs  stringpool.rs  xml.rs
