[package]
name = "axmldecoder"
description = "Decode Android's binary XML format"
license = "MIT OR Apache-2.0"
version = "0.4.0"
authors = ["Terry Chia <terry@ayrx.me>"]
edition = "2021"
repository = "https://github.com/Ayrx/axmldecoder"
exclude = ["examples/**", "axmldecoder-printer/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
deku = "0.12.4"
indexmap = "1.7.0"
thiserror = "1.0.30"
