[package]
name = "axmldecoder"
description = "Decode Android's binary XML format"
license = "MIT OR Apache-2.0"
version = "0.6.0"
authors = ["Terry Chia <terry@ayrx.me>"]
edition = "2021"
repository = "https://github.com/Ayrx/axmldecoder"
exclude = ["examples/**", "axmldecoder-printer/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
# TODO: move to crates.io when the feature is available
# default attribute for enums not yet available at version realeased on crates.io
# https://github.com/sharksforarms/deku/pull/335
deku = { git = "https://github.com/sharksforarms/deku" }
indexmap = "2.0"
thiserror = "1.0.37"
